title graphic + gifs work in waves

--- a/waveforms/Makefile
+++ b/waveforms/Makefile
@@ -5,7 +5,11 @@ setup:
 	pip3 install --user pipenv
 	pipenv --python 3.7
 
-frames:
+folders:
+	mkdir -p out
+	mkdir -p frames
+
+frames: folders
 	pipenv run python3 make_frames.py
 
 crushed_frames: frames
@@ -15,7 +19,7 @@ animated_pngs: crushed_frames
 	sh make_apngs.sh
 
 animated_gifs: animated_pngs
-	apng2gif out/*.png
+	sh make_gifs.sh
 
 clean:
 	rm -rf frames out
